--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,15 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
+    margin: auto;
 }
 .country{
     padding: 20px;
     border: 2px solid rgb(245, 169, 5);
     border-radius: 20px;
     background-color: rgb(8, 214, 87);
+    color: black;
+    font-weight: bold;
 
 }
 .country img{
